# lockmaster

./: .env  .gitignore  LICENSE  README.md  build_protos.sh  dev.env  docker-compose.dev.yml  docker-compose.yml  example.env  update_frontend.sh
.balena/: balena.yml
.balena_example/: balena.yml
app/doormanager/: .devcontainer.json  Dockerfile  Dockerfile.dev  requirements.txt
app/doormanager_test/: Dockerfile  README.md  requirements.txt
app/web/: Dockerfile  Dockerfile.dev  Dockerfile.doorcontrol  Dockerfile.doormonitor  Dockerfile.test
app/web_old/: Dockerfile  Dockerfile.test
database/: database.env
db/: Dockerfile  Dockerfile.db  Dockerfile.dev
doorbell/: .gitignore  Dockerfile  README.md  hyper.toml  pyproject.toml  start.sh
doorbell/doorbell/: audio.py  layout.py  main.py  serve.py
doorbell/doorbell/app/: __init__.py  app.py  approot.py  const.py
doorbell/doorbell/app/uix/: keypad.py
doorbell/doorbell/app/views/: home.py  myview.py
doorbell/doorbell/assets/halloween/: halloweenatlas.atlas
doorbell/doorbell/config/: common.py  config.py  db.py  doors.yaml  payloads.py  topics.yaml
doorbell/doorbell/db/: database.py  orm.py  repositories.py
doorbell/doorbell/models/: __init__.py  memory.py  models.py
doorbell/doorbell/mqtt/: client.py  client_old.py  config.py
doorbell/doorbell/pages/: forgotpassword.py  home.py  login.py  signup.py
protos/: doormanager.proto
room-assistant/: Dockerfile
room-assistant/config/: local.yml
traefik/: Dockerfile  traefik.toml
traefik/conf.d/: auth.toml  homeassistant.toml  (+1 more)
unifi/: Dockerfile
(+78 files in other folders)
